--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <button class="btn btn--outline">IBM Cognos</button>
         <button class="btn btn--outline">Adobe Photoshop</button>
       </div>
-    </div>
+    </div>  
 
 
 
@@ -318,7 +318,7 @@
   <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Python[IBM].jpg" alt="" />
+      <img draggable="false" src="./Certifications/Python[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Introduction to Python</h3>
@@ -326,8 +326,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="/Certifications/Python[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Python[IBM].jpg" download="Introduction to Python" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Python[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Python[IBM].jpg" download="Introduction to Python" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
