--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Java[IBM].jpg" alt="" />
+      <img draggable="false" src="./Certifications/Java[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Java Fundamentals</h3>
@@ -342,15 +342,15 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="/Certifications/Java[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Java[IBM].jpg" download="Java Fundamentals" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Java[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Java[IBM].jpg" download="Java Fundamentals" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/RDBMS[IBM].jpg" alt="" />
+      <img draggable="false" src="./Certifications/RDBMS[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>RDBMS</h3>
@@ -358,8 +358,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="/Certifications/RDBMS[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/RDBMS[IBM].jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
+            <a href="./Certifications/RDBMS[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/RDBMS[IBM].jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
           </div>
         </div>
       </div>
@@ -368,7 +368,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Business Intelligence [IBM].jpg" alt="" />
+      <img draggable="false" src="./Certifications/Business Intelligence [IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Business Intelligence</h3>
@@ -376,8 +376,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="/Certifications/Business Intelligence [IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Business Intelligence [IBM].jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Business Intelligence [IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Business Intelligence [IBM].jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -385,7 +385,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Data Science (IBM).jpg" alt="" />
+      <img draggable="false" src="./Certifications/Data Science (IBM).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Data Science 101</h3>
@@ -393,8 +393,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="/Certifications/Data Science (IBM).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Data Science (IBM).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Data Science (IBM).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Data Science (IBM).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -403,7 +403,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Google Digital Garage.jpg" alt="" />
+      <img draggable="false" src="./Certifications/Google Digital Garage.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Google Digital Garage</h3>
@@ -411,8 +411,8 @@
         <div class="desc">
           <p>This Certificate is Issued by GOOGLE</p>
           <div class="btns">
-            <a href="/Certifications/Google Digital Garage.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Google Digital Garage.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Google Digital Garage.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Google Digital Garage.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -420,7 +420,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Financial Literacy.jpg" alt="" />
+      <img draggable="false" src="./Certifications/Financial Literacy.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Financial Literacy</h3>
@@ -428,8 +428,8 @@
         <div class="desc">
           <p>This Certificate is Offered by UNICEF</p>
           <div class="btns">
-            <a href="/Certifications/Financial Literacy.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Financial Literacy.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Financial Literacy.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Financial Literacy.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -437,7 +437,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Employability Skills Foundation Course .jpg" alt="" />
+      <img draggable="false" src="./Certifications/Employability Skills Foundation Course .jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Employability Skills Foundation Course</h3>
@@ -445,8 +445,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Wadhwani Foundation</p>
           <div class="btns">
-            <a href="/Certifications/Employability Skills Foundation Course .jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Employability Skills Foundation Course .jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Employability Skills Foundation Course .jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Employability Skills Foundation Course .jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -455,7 +455,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Digital Productivity.jpg" alt="" />
+      <img draggable="false" src="./Certifications/Digital Productivity.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Digital Productivity</h3>
@@ -463,15 +463,15 @@
         <div class="desc">
           <p>This Certificate is Offered by NIIT Foundation </p>
           <div class="btns">
-            <a href="/Certifications/Digital Productivity.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Digital Productivity.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Digital Productivity.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Digital Productivity.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Excel Basics for Data Analytics Coursera.jpg" alt="" />
+      <img draggable="false" src="./Certifications/Excel Basics for Data Analytics Coursera.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Excel Basics for Data Analysis</h3>
@@ -479,8 +479,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Coursera </p>
           <div class="btns">
-            <a href="/Certifications/Excel Basics for Data Analytics Coursera.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Excel Basics for Data Analytics Coursera.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Excel Basics for Data Analytics Coursera.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Excel Basics for Data Analytics Coursera.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -488,7 +488,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" alt="" />
+      <img draggable="false" src="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Introduction to Data Analytics</h3>
@@ -496,8 +496,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Coursera </p>
           <div class="btns">
-            <a href="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -506,7 +506,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Filimora(Udemy).jpg" alt="" />
+      <img draggable="false" src="./Certifications/Filimora(Udemy).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Filmora 11/X/9 Video Editing</h3>
@@ -514,8 +514,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Udemy </p>
           <div class="btns">
-            <a href="/Certifications/Filimora(Udemy).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="/Certifications/Filimora(Udemy).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="./Certifications/Filimora(Udemy).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="./Certifications/Filimora(Udemy).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
