--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">`
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="keywords" content="portfolio, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -13,6 +13,11 @@
     <link id='favicon' rel="shortcut icon" href="./assets/images/NSR_LOGO.png" type="image/x-png">
     <!-- for certifications -->
     <!-- <link rel="stylesheet" href="./dist/style.css"> -->
+
+
+
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     
 
     <title>Portfolio | Sridhar Reddy Nalipi</title>
@@ -22,6 +27,7 @@
 <!-- pre loader -->
 <div class="loader-container">
   <img draggable="false" src="./assets/images/Like-Follow-unscreen.gif" alt="">
+
 
   
   <svg width="300" height="120" id="clackers">
@@ -235,7 +241,7 @@
         <button class="btn btn--outline">IBM Cognos</button>
         <button class="btn btn--outline">Adobe Photoshop</button>
       </div>
-    </div>  
+    </div>
 
 
 
@@ -318,7 +324,7 @@
   <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Python[IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/Python[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Introduction to Python</h3>
@@ -326,15 +332,15 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Python[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Python[IBM].jpg" download="Introduction to Python" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Python[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Python[IBM].jpg" download="Introduction to Python" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Java[IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/Java[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Java Fundamentals</h3>
@@ -342,15 +348,15 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Java[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Java[IBM].jpg" download="Java Fundamentals" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Java[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Java[IBM].jpg" download="Java Fundamentals" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/RDBMS[IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/RDBMS[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>RDBMS</h3>
@@ -358,8 +364,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/RDBMS[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/RDBMS[IBM].jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
+            <a href="/Certifications/RDBMS[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/RDBMS[IBM].jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
           </div>
         </div>
       </div>
@@ -368,7 +374,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Business Intelligence [IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/Business Intelligence [IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Business Intelligence</h3>
@@ -376,8 +382,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Business Intelligence [IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Business Intelligence [IBM].jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Business Intelligence [IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Business Intelligence [IBM].jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -385,7 +391,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Data Science (IBM).jpg" alt="" />
+      <img draggable="false" src="/Certifications/Data Science (IBM).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Data Science 101</h3>
@@ -393,8 +399,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Data Science (IBM).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Data Science (IBM).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Data Science (IBM).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Data Science (IBM).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -403,7 +409,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Google Digital Garage.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Google Digital Garage.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Google Digital Garage</h3>
@@ -411,8 +417,8 @@
         <div class="desc">
           <p>This Certificate is Issued by GOOGLE</p>
           <div class="btns">
-            <a href="./Certifications/Google Digital Garage.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Google Digital Garage.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Google Digital Garage.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Google Digital Garage.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -420,7 +426,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Financial Literacy.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Financial Literacy.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Financial Literacy</h3>
@@ -428,8 +434,8 @@
         <div class="desc">
           <p>This Certificate is Offered by UNICEF</p>
           <div class="btns">
-            <a href="./Certifications/Financial Literacy.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Financial Literacy.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Financial Literacy.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Financial Literacy.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -437,7 +443,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Employability Skills Foundation Course .jpg" alt="" />
+      <img draggable="false" src="/Certifications/Employability Skills Foundation Course .jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Employability Skills Foundation Course</h3>
@@ -445,8 +451,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Wadhwani Foundation</p>
           <div class="btns">
-            <a href="./Certifications/Employability Skills Foundation Course .jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Employability Skills Foundation Course .jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Employability Skills Foundation Course .jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Employability Skills Foundation Course .jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -455,7 +461,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Digital Productivity.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Digital Productivity.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Digital Productivity</h3>
@@ -463,15 +469,15 @@
         <div class="desc">
           <p>This Certificate is Offered by NIIT Foundation </p>
           <div class="btns">
-            <a href="./Certifications/Digital Productivity.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Digital Productivity.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Digital Productivity.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Digital Productivity.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Excel Basics for Data Analytics Coursera.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Excel Basics for Data Analytics Coursera.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Excel Basics for Data Analysis</h3>
@@ -479,8 +485,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Coursera </p>
           <div class="btns">
-            <a href="./Certifications/Excel Basics for Data Analytics Coursera.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Excel Basics for Data Analytics Coursera.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Excel Basics for Data Analytics Coursera.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Excel Basics for Data Analytics Coursera.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -488,7 +494,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" alt="" />
+      <img draggable="false" src="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Introduction to Data Analytics</h3>
@@ -496,8 +502,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Coursera </p>
           <div class="btns">
-            <a href="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -506,7 +512,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Filimora(Udemy).jpg" alt="" />
+      <img draggable="false" src="/Certifications/Filimora(Udemy).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Filmora 11/X/9 Video Editing</h3>
@@ -514,8 +520,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Udemy </p>
           <div class="btns">
-            <a href="./Certifications/Filimora(Udemy).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Filimora(Udemy).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Filimora(Udemy).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Filimora(Udemy).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -539,39 +545,44 @@
 
 
 
-
-
-
-
 <!-- contact section starts -->
 <section class="contact" id="contact">
+  
   <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
+
   <div class="container">
-      <div class="content">
-          <div class="image-box">
-              <img draggable="false" src="./assets/images/contact1.png" alt="">
-          </div>
-          <form action="https://api.web3forms.com/submit" method="POST">
-              <input type="hidden" name="apikey" value="a62b4f4f-855e-45fe-bac8-17f8cce18878">
-              <div class="form-group">
-                  <div class="field">
-                      <input type="text" name="name" placeholder="Name" required>
-                      <i class='fas fa-user'></i>
-                  </div>
-                  <div class="field">
-                      <input type="email" name="email" placeholder="Email" required>
-                      <i class='fas fa-envelope'></i>
-                  </div>
-                  <div class="message">
-                      <textarea placeholder="Message" name="message" required></textarea>
-                      <i class="fas fa-comment-dots"></i>
-                  </div>
-              </div>
-              <div class="button-area">
-                  <button type="submit">Submit <i class="fa fa-paper-plane"></i></button>
-              </div>
-          </form>
+    <div class="content">
+      <div class="image-box">
+        <img draggable="false" src="./assets/images/contact1.png" alt="">
       </div>
+    <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
+      <input type="hidden" name="apikey" value="a62b4f4f-855e-45fe-bac8-17f8cce18878">
+
+      
+      <div class="form-group">
+        <div class="field">
+          <input type="text" name="name" placeholder="Name" required>
+          <i class='fas fa-user'></i>
+        </div>
+        <div class="field">
+          <input type="text" name="email" placeholder="Email" required>
+          <i class='fas fa-envelope'></i>
+        </div>
+        <div class="field">
+          <input type="text" name="phone" placeholder="Phone">
+          <i class='fas fa-phone-alt'></i>
+        </div>
+        <div class="message">
+        <textarea placeholder="Message" name="message" required></textarea>
+        <i class="fas fa-comment-dots"></i>
+        </div>
+        </div>
+      <div class="button-area">
+        <button type="submit">
+          Submit <i class="fa fa-paper-plane"></i></button>
+      </div>
+    </form>
+  </div>
   </div>
 </section>
 <!-- contact section ends -->
