--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="/Certifications/Data Science (IBM).jpg" alt="" />
+      <img draggable="false" src="./Certifications/Data Science (IBM).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Data Science 101</h3>
