--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <!-- Experience-->
 
 <!-- education section starts -->
-<section class="education" id="education">
+<section class="experience" id="education">
 
   <h1 class="heading"><i class="fas fa-graduation-cap"></i> Experience </h1>
 
@@ -175,8 +175,20 @@
         <div class="content">
         <h3>Python with Machine Learning </h3>
         <p>EISYSTEMS SERVICES</p>
-        <h4>Feb 2024 - Current | Remote</h4>
+        <h4>Feb 2024 - Present | Remote</h4>
         </div>
+    </div>
+
+	    
+
+    <div class="box">
+
+      <div class="content">
+      <h3> Managed Network Expert at Chegg  </h3>
+      <p>Chegg Indis</p>
+      <h4>Sep 2023 - Present | Remote</h4>
+      <li>Engaged as a Freelance Independent Contractor with Chegg India, providing Q&A engagement services in the field of Computer Science. Responsibilities included adhering to agreed-upon terms and conditions while delivering high-quality solutions. Continuously providing expertise in Computer Science through the Q&A engagement platform, demonstrating dedication and ongoing commitment to the role.</li>
+      </div>
     </div>
 
     <div class="box">
