--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <!-- Experience-->
 
 <!-- education section starts -->
-<section class="experience" id="education">
+<section class="education" id="education">
 
   <h1 class="heading"><i class="fas fa-graduation-cap"></i> Experience </h1>
 
