--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
       <div class="content">
       <h3> Managed Network Expert at Chegg  </h3>
-      <p>Chegg Indis</p>
+      <p>Chegg India</p>
       <h4>Sep 2023 - Present | Remote</h4>
       <li>Engaged as a Freelance Independent Contractor with Chegg India, providing Q&A engagement services in the field of Computer Science. Responsibilities included adhering to agreed-upon terms and conditions while delivering high-quality solutions. Continuously providing expertise in Computer Science through the Q&A engagement platform, demonstrating dedication and ongoing commitment to the role.</li>
       </div>
