--- a/index.html
+++ b/index.html
@@ -175,20 +175,8 @@
         <div class="content">
         <h3>Python with Machine Learning </h3>
         <p>EISYSTEMS SERVICES</p>
-        <h4>Feb 2024 - Present | Remote</h4>
+        <h4>Feb 2024 - Current | Remote</h4>
         </div>
-    </div>
-
-	    
-
-    <div class="box">
-
-      <div class="content">
-      <h3> Managed Network Expert at Chegg  </h3>
-      <p>Chegg India</p>
-      <h4>Sep 2023 - Present | Remote</h4>
-      <li>Engaged as a Freelance Independent Contractor with Chegg India, providing Q&A engagement services in the field of Computer Science. Responsibilities included adhering to agreed-upon terms and conditions while delivering high-quality solutions. Continuously providing expertise in Computer Science through the Q&A engagement platform, demonstrating dedication and ongoing commitment to the role.</li>
-      </div>
     </div>
 
     <div class="box">
@@ -336,7 +324,7 @@
   <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Python[IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/Python[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Introduction to Python</h3>
@@ -344,15 +332,15 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Python[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Python[IBM].jpg" download="Introduction to Python" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Python[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Python[IBM].jpg" download="Introduction to Python" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Java[IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/Java[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Java Fundamentals</h3>
@@ -360,15 +348,15 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Java[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Java[IBM].jpg" download="Java Fundamentals" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Java[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Java[IBM].jpg" download="Java Fundamentals" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/RDBMS[IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/RDBMS[IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>RDBMS</h3>
@@ -376,8 +364,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/RDBMS[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/RDBMS[IBM].jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
+            <a href="/Certifications/RDBMS[IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/RDBMS[IBM].jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
           </div>
         </div>
       </div>
@@ -386,7 +374,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Business Intelligence [IBM].jpg" alt="" />
+      <img draggable="false" src="/Certifications/Business Intelligence [IBM].jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Business Intelligence</h3>
@@ -394,8 +382,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Business Intelligence [IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Business Intelligence [IBM].jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Business Intelligence [IBM].jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Business Intelligence [IBM].jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -403,7 +391,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Data Science (IBM).jpg" alt="" />
+      <img draggable="false" src="/Certifications/Data Science (IBM).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Data Science 101</h3>
@@ -411,8 +399,8 @@
         <div class="desc">
           <p>This Certificate is Issued by IBM Career Education Program</p>
           <div class="btns">
-            <a href="./Certifications/Data Science (IBM).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Data Science (IBM).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Data Science (IBM).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Data Science (IBM).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -421,7 +409,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Google Digital Garage.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Google Digital Garage.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Google Digital Garage</h3>
@@ -429,8 +417,8 @@
         <div class="desc">
           <p>This Certificate is Issued by GOOGLE</p>
           <div class="btns">
-            <a href="./Certifications/Google Digital Garage.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Google Digital Garage.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Google Digital Garage.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Google Digital Garage.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -438,7 +426,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Financial Literacy.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Financial Literacy.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Financial Literacy</h3>
@@ -446,8 +434,8 @@
         <div class="desc">
           <p>This Certificate is Offered by UNICEF</p>
           <div class="btns">
-            <a href="./Certifications/Financial Literacy.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Financial Literacy.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Financial Literacy.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Financial Literacy.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -455,7 +443,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Employability Skills Foundation Course .jpg" alt="" />
+      <img draggable="false" src="/Certifications/Employability Skills Foundation Course .jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Employability Skills Foundation Course</h3>
@@ -463,8 +451,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Wadhwani Foundation</p>
           <div class="btns">
-            <a href="./Certifications/Employability Skills Foundation Course .jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Employability Skills Foundation Course .jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Employability Skills Foundation Course .jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Employability Skills Foundation Course .jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -473,7 +461,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Digital Productivity.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Digital Productivity.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Digital Productivity</h3>
@@ -481,15 +469,15 @@
         <div class="desc">
           <p>This Certificate is Offered by NIIT Foundation </p>
           <div class="btns">
-            <a href="./Certifications/Digital Productivity.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Digital Productivity.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Digital Productivity.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Digital Productivity.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Excel Basics for Data Analytics Coursera.jpg" alt="" />
+      <img draggable="false" src="/Certifications/Excel Basics for Data Analytics Coursera.jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Excel Basics for Data Analysis</h3>
@@ -497,8 +485,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Coursera </p>
           <div class="btns">
-            <a href="./Certifications/Excel Basics for Data Analytics Coursera.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Excel Basics for Data Analytics Coursera.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Excel Basics for Data Analytics Coursera.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Excel Basics for Data Analytics Coursera.jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -506,7 +494,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" alt="" />
+      <img draggable="false" src="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Introduction to Data Analytics</h3>
@@ -514,8 +502,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Coursera </p>
           <div class="btns">
-            <a href="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/COURSERA (Inroduction to Data Analytics).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/COURSERA (Inroduction to Data Analytics).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
@@ -524,7 +512,7 @@
 
 
     <div class="box tilt">
-      <img draggable="false" src="./Certifications/Filimora(Udemy).jpg" alt="" />
+      <img draggable="false" src="/Certifications/Filimora(Udemy).jpg" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Filmora 11/X/9 Video Editing</h3>
@@ -532,8 +520,8 @@
         <div class="desc">
           <p>This Certificate is Offered by Udemy </p>
           <div class="btns">
-            <a href="./Certifications/Filimora(Udemy).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="./Certifications/Filimora(Udemy).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
+            <a href="/Certifications/Filimora(Udemy).jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
+            <a href="/Certifications/Filimora(Udemy).jpg" download="" class="btn" target="_self"><i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
