--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h3>I'm Sridhar Reddy Nalipi</h3>
         <span class="tag">Final year Student @ KSRMCE </span>
         
-        <p>As a pre-final year B.Tech student with a fervent enthusiasm for technology, I am actively pursuing career opportunities in web development, software engineering, and programming. My goal is to secure a challenging role within a reputable organization where I can leverage my skills to contribute significantly to the company's growth. I am passionate about crafting user-friendly web applications and designing efficient software solutions. I aim to excel in these areas by applying my programming expertise.</p>
+        <p>As a final year B.Tech student with a fervent enthusiasm for technology, I am actively pursuing career opportunities in web development, software engineering, and programming. My goal is to secure a challenging role within a reputable organization where I can leverage my skills to contribute significantly to the company's growth. I am passionate about crafting user-friendly web applications and designing efficient software solutions. I aim to excel in these areas by applying my programming expertise.</p>
         
         <div class="box-container">
             <!-- <div class="box">
