--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-scroll">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">`
@@ -22,11 +22,11 @@
 
     <title>Portfolio | Sridhar Reddy Nalipi</title>
 </head>
-<body oncontextmenu="return false">
+<body oncontextmenu="return false" class="no-scroll">
 
 <!-- pre loader -->
 <div class="loader-container">
-  <img draggable="false" src="./assets/images/Like-Follow-unscreen.gif" alt="">
+  <img draggable="False" src="./assets/images/Like-Follow-unscreen.gif" alt="">
 
 
   
