--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/NodeJS.svg" alt="NodeJS">
+                        <img class="skill-image" src="./assets/images/skills/NodeJS.svg" alt="NodeJS">
                         <p class="skill-name">NodeJS</p>
                     </div>
                 </div>
@@ -268,31 +268,31 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/django-svgrepo-com.svg" alt="Django">
+                        <img class="skill-image" src="./assets/images/skills/django-svgrepo-com.svg" alt="Django">
                         <p class="skill-name">Django</p>
                     </div>
                 </div>    
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="assets/images/skills/numpy-svgrepo-com.svg" alt="NumPy">
+                        <img class="skill-image" src="./assets/images/skills/numpy-svgrepo-com.svg" alt="NumPy">
                         <p class="skill-name">NumPy</p>
                     </div>
                 </div>           
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Pandas.svg" alt="Pandas">
+                        <img class="skill-image" src="./assets/images/skills/Pandas.svg" alt="Pandas">
                         <p class="skill-name">Pandas</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Matplotlib.svg" alt="Matplotlib"/>
+                        <img class="skill-image" src="./assets/images/skills/Matplotlib.svg" alt="Matplotlib"/>
                         <p class="skill-name">Matplotlib</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/seaborn-1.svg" alt="Seaborn">
+                        <img class="skill-image" src="./assets/images/skills/seaborn-1.svg" alt="Seaborn">
                         <p class="skill-name">Seaborn</p>
                     </div>
                 </div>
@@ -309,43 +309,43 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 tools-container" data-aos="fade-down" data-aos-delay="200">
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/vscode.svg" alt="VSCode">
+                        <img class="tool-image" src="./assets/images/tools/vscode.svg" alt="VSCode">
                         <p class="tool-name">VSCode</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/github.svg" alt="Github">
+                        <img class="tool-image" src="./assets/images/tools/github.svg" alt="Github">
                         <p class="tool-name">Github</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/canva.svg" alt="Canva">
+                        <img class="tool-image" src="./assets/images/tools/canva.svg" alt="Canva">
                         <p class="tool-name">Canva</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Figma.svg" alt="Figma">
+                        <img class="tool-image" src="./assets/images/tools/Figma.svg" alt="Figma">
                         <p class="tool-name">Figma</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/ChatGPT.svg" alt="ChatGPT">
+                        <img class="tool-image" src="./assets/images/tools/ChatGPT.svg" alt="ChatGPT">
                         <p class="tool-name">ChatGPT</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Gemini.svg" alt="Gemini">
+                        <img class="tool-image" src="./assets/images/tools/Gemini.svg" alt="Gemini">
                         <p class="tool-name">Gemini</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/aws.svg" alt="AWS">
+                        <img class="tool-image" src="./assets/images/tools/aws.svg" alt="AWS">
                         <p class="tool-name">AWS</p>
                     </div>
                 </div>
@@ -381,7 +381,7 @@
                             <div class="overlay">
                                 <a href="https://github.com/sridharreddy7831/pothole_Detection" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="/assets/images/projects/pothole.webp" class="card-img-top banner" alt="Pothole Detection Banner">
+                            <img src="./assets/images/projects/pothole.webp" class="card-img-top banner" alt="Pothole Detection Banner">
                         </div>
                     </div>
                 </div>
@@ -406,7 +406,7 @@
                             <div class="overlay">
                                 <a href="https://github.com/sridharreddy7831/HR_Data_Analysis" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="/assets/images/projects/HR_Data_Analysis.webp" class="card-img-top banner" alt="HR Data Analysis Banner">
+                            <img src="./assets/images/projects/HR_Data_Analysis.webp" class="card-img-top banner" alt="HR Data Analysis Banner">
                         </div>
                     </div>
                 </div>
